chore: integrate SonarQube for static code analysis and resolve identified code quality issues